@@ -38,7 +38,7 @@ namespace Magick
   void appendImages( Image *appendedImage_,
 		     InputIterator first_,
 		     InputIterator last_,
-		     bool stack_ = false );
+		     bool stack_ );
 
   // Average a set of images.
   // All the input images must be the same size in pixels.
@@ -68,8 +68,8 @@ namespace Magick
   void mapImages( InputIterator first_,
 		  InputIterator last_,
 		  const Image& mapImage_,
-		  bool dither_ = false,
-		  bool measureError_ = false );
+		  bool dither_,
+		  bool measureError_ );
 
   // Create a composite image by combining several separate images.
   template <class Container, class InputIterator>
@@ -90,14 +90,15 @@ namespace Magick
   template <class InputIterator>
   void quantizeImages( InputIterator first_,
 		       InputIterator last_,
-		       bool measureError_  = false );
+		       bool measureError_ );
 
   // Read images into existing container (appending to container)
   template <class Container>
   void readImages( Container *sequence_,
 		   const std::string &imageSpec_ );
-  template <class Container>
+
   // Read images from BLOB
+  template <class Container>
   void readImages( Container *sequence_,
 		   const Blob &blob_ );
 
@@ -108,13 +109,13 @@ namespace Magick
   void writeImages( InputIterator first_,
 		    InputIterator last_,
 		    const std::string &imageSpec_,
-		    bool adjoin_ = true );
-  template <class InputIterator>
+		    bool adjoin_ );
   // Write images to a BLOB
+  template <class InputIterator>
   void writeImages( InputIterator first_,
 		    InputIterator last_,
 		    Blob *blob_,
-		    bool adjoin_ = true );
+		    bool adjoin_ );
 
   //
   // STL function object declarations/definitions
@@ -2048,7 +2049,7 @@ namespace Magick
   void appendImages( Image *appendedImage_,
 		     InputIterator first_,
 		     InputIterator last_,
-		     bool stack_ ) {
+		     bool stack_ = false) {
     MagickLib::ExceptionInfo exceptionInfo;
     MagickLib::GetExceptionInfo( &exceptionInfo );
     linkImages( first_, last_ );
@@ -2111,8 +2112,8 @@ namespace Magick
   void mapImages( InputIterator first_,
 		  InputIterator last_,
 		  const Image& mapImage_,
-		  bool dither_,
-		  bool measureError_ ) {
+		  bool dither_ = false,
+		  bool measureError_ = false ) {
 
     MagickLib::ExceptionInfo exceptionInfo;
     MagickLib::GetExceptionInfo( &exceptionInfo );
@@ -2263,7 +2264,7 @@ namespace Magick
   template <class InputIterator>
   void quantizeImages( InputIterator first_,
 		       InputIterator last_,
-		       bool measureError_ ) {
+		       bool measureError_ = false ) {
     linkImages( first_, last_ );
 
     MagickLib::QuantizeImages( first_->options()->quantizeInfo(),
@@ -2322,7 +2323,7 @@ namespace Magick
   void writeImages( InputIterator first_,
 		    InputIterator last_,
 		    const std::string &imageSpec_,
-		    bool adjoin_ ) {
+		    bool adjoin_ = true ) {
 
     // Save original image settings
     std::string origFileName = first_->fileName();
@@ -2356,7 +2357,7 @@ namespace Magick
   void writeImages( InputIterator first_,
 		    InputIterator last_,
 		    Blob *blob_,
-		    bool adjoin_ ) {
+		    bool adjoin_ = true) {
     // Save original image settings
     std::string origMagick = first_->magick();
     bool origAdjoin = first_->adjoin();
